# SchoologyConnect

./: .gitignore  README.md  auth.py  cache.py  db.py  main.py  pyproject.toml  util.py
templates/: index.html  login.html  profile.html
