[tool.poetry]
name = "repl_python3_SchoologyClassMembers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
schoolopy = "^0.2.1"
Flask = "^2.0.1"
supabase-py = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
